# pundit

./: .gitignore  Cargo.toml  readme.md
scripts/: openAnkiDatabase.sh
src/: anki.rs  anki_collection.rs  anki_deck.rs  anki_model.rs  ankitool.rs  args.rs  config.rs  dir_utils.rs  errors.rs  file_utils.rs  filter_options.rs  fzf.rs  graph.rs  journal.rs  journal_info.rs  journal_opts.rs  lib.rs  logger.rs  main.rs  named.rs  note.rs  note_arg.rs  note_utils.rs  notes.rs  paper.rs  paper_opts.rs  pundit.rs  pundit_pankit.rs  settings.rs
src/anki/: anki_args.rs  anki_card.rs  anki_collection.rs  anki_deck.rs  anki_model.rs  mod.rs  named.rs
src/pankit/: anki_card.rs  anki_collection.rs  anki_deck.rs  anki_note.rs  main.rs  mod.rs  pankit_note_info.rs  pankit_yaml_block.rs  pankit_yaml_note.rs
test/: 20200424162358-note1.org  20200424162405-note5.org  20200424162439-linkNote1.org  20200424162453-linkNote2.org  new_note.org
testSetups/3linkedNotes/: 20200424162453-linkNote2.org
testSetupsAnkitool/listDecks/: target.anki2
testSetupsAnkitool/newDatabaseSchemaListDecks/: target.anki2
testSetupsAnkitool/newDatabaseSchemaListFields/: source.anki2  target.anki2
testSetupsAnkitool/newDatabaseSchemaListModels/: target.anki2
testSetupsPankit/addExistingNoteAgain/: anki_note.org
testSetupsPankit/addNoteDefaultDeckModel/: anki_note.org
testSetupsPankit/addNoteToEmptyCollection/: anki_note.org  target.anki2
testSetupsPankit/addNoteWithModelWithNoteIdAsSortField/: anki_note.org  source.anki2
testSetupsPankit/colonsInDeckName/: anki_note.org  source.anki2  target.anki2
testSetupsPankit/conflictingNoteContentsNoDatabase/: anki_note.org
testSetupsPankit/conflictingNoteContentsNoDatabaseForceAnki/: anki_note.org
testSetupsPankit/conflictingNoteContentsNoDatabaseForcePundit/: source.anki2  target.anki2
testSetupsPankit/emptyCollection/: source.anki2
testSetupsPankit/integerInSortField/: anki_note.org  target.anki2
testSetupsPankit/smallCollection/: collection.anki2
testSetupsPankit/spacesInDeckName/: anki_note.org  source.anki2  target.anki2
testSetupsPundit/: createBenchmark.sh
testSetupsPundit/3linkedNotes/: 20200424162358-note1.org
testSetupsPundit/database/: 20200424162439-linkNote1.org  (+2 more)
tests/: ankitool.rs  pankit.rs  pundit.rs  pundit_journal.rs  pundit_pankit.rs  pundit_paper.rs
(+21 files in other folders)
