[package]
name = "pundit"
version = "0.1.0"
authors = ["tehforsch <Tonipeter92@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pundit"
path = "src/pundit.rs"

[[bin]]
name = "pankit"
path = "src/pankit/main.rs"

[features]
default = ["pankit"]
pankit = ["rusqlite", "rust-crypto", "serde_json", "serde", "serde_derive"]

[dependencies]
regex = "1"
clap = "3.0.0-beta.2"
anyhow = "1.0.13"
rusqlite = {version = "0.24.1", optional=true}
rust-crypto = {version = "^0.2", optional=true}
serde_json = {version = "1.0.59", optional=true}
serde = {version = "1.0.117", optional=true}
serde_derive = {version = "1.0.117", optional=true}
chrono = "0.4.19"

[dev-dependencies]
tempdir = "0.3.7"