[package]
name = "pundit"
version = "0.1.0"
authors = ["tehforsch <Tonipeter92@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pundit"
path = "src/pundit.rs"

[[bin]]
name = "ankitool"
path = "src/ankitool.rs"

[dependencies]
regex = "1"
clap = "3.0.0-beta.2"
anyhow = "1.0.13"
rusqlite = {version = "0.24.1"}
rust-crypto = {version = "^0.2"}
serde_json = {version = "1.0.59"}
serde = {version = "1.0.117", features=["derive"]}
serde_derive = {version = "1.0.117"}
serde_yaml = {version = "0.8"}
chrono = "0.4.19"
generational-arena = {version = "0.2.8", features=["serde"]}
rand = "0.7.3"
pathdiff = "0.2.0"

[dev-dependencies]
tempdir = "0.3.7"
walkdir = "2.0.1"
dissimilar = "1.0"
itertools = "0.9.0"